Fixed footer on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,40 @@
     padding: 0px;
     box-sizing: border-box;
 }
+/* width */
+*::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+*::-webkit-scrollbar-thumb {
+    background: #50fa7b; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+*::-webkit-scrollbar-thumb:hover {
+    background: #50fa7b; 
+  }
+body{
+    background-color: #383a59;
+    min-height: 140vh;
+    overflow-x: hidden;
+    display: block;
+    position: relative;
+}
 h1{
     font-family: 'Bebas Neue', cursive;
+    color: white;
+    height: fit-content;
+    letter-spacing: 4px;
+    line-height: 35px;
 }
 p{
     font-family: 'Roboto', sans-serif;
@@ -17,7 +49,7 @@ a:visited {
 }
 .nav-a a:active {
     background-color: white;
-    color: black;
+    color: #282a36;
     font-size: 18px;
 }
 .top-header {
@@ -35,7 +67,7 @@ a:visited {
 
 .top-header a:hover {
     background-color: white;
-    color: black;
+    color: #282a36;
     font-size: 35px;
     border-radius: 4px;
 }
@@ -48,9 +80,10 @@ nav {
     min-height: 10vh;
     font-family: 'Montserrat', sans-serif;
     color: white;
-    background-color: #263238;
+    background-color: #282a36;
     position: fixed;
     z-index: 1;
+    box-shadow: 1px 0.5px 1px 0.5px rgba(80,250,123);
 }
 
 .nav-a {
@@ -74,7 +107,7 @@ nav {
 
 .nav-a a:hover {
     background-color: white;
-    color: black;
+    color: #282a36;
     font-size: 18px;
 }
 
@@ -88,26 +121,67 @@ nav {
 }
 main{
     position: absolute;
-    margin-top: 12vh;
-    padding-left: 20vw;
-    padding-right: 20vw;
-    height: 100vh;
+    margin-bottom: 0;
+    margin-top: 20vh;
+    max-height: 180vh;
+    padding:5px 1vw 5vw 5vw;
+    width: 98vw;
     z-index: 0;
+    background-color: #383a59;
 }
 .main-wrapper{
-    border-style: solid;
-    border-color: #939799;
-    border-width: 1px;
-    border-radius: 10px;
-    padding: 10px;
+    display: inline-block;
+    padding: 2%;
+    margin-left: 4%;
+    line-height: 22px;
+    width: 52vw;
+    height: fit-content;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 1.2em;
 }
-@media screen and (max-width:650px) {
+.featuredhomepage{
+    margin-right: 0px;
+    display: inline-flex;
+    flex-direction: column;
+    position: absolute;
+    width: 40vw;
+    align-items: center;
+    justify-content: center;
+}
+.featuredhomepage img{
+    width: 25vw;
+    padding-right: 0px;
+    justify-content: space-around;
+    transition: ease-in .5s;
+}
+.featuredhomepage img:hover{
+    width: 28vw;
+}
+footer{
+    text-align: center;
+    background-color: #282a36;
+    color: white;
+    padding: 50px;
+    height: 20px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+@media screen and (max-width:680px) {
     body {
         overflow-x: hidden;
+        min-height: 190vh;
     }
     main{
-        padding-left: 5vw;
-        padding-right: 5vw;
+        margin-top: 16vh;
+        width: 100vw;
+        padding-left: 2vw;
+        padding-right: 2vw;
+        position: absolute;
+    }
+    .main-wrapper{
+        width: 85vw;
     }
     nav {
         justify-content: center;
@@ -120,7 +194,7 @@ main{
         width: 70vw;
         top: 8vh;
         color: white;
-        background-color: #263238;
+        background-color: #282a36;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -145,6 +219,17 @@ main{
     }
     .top-header a:hover {
         font-size: 20px;
+    }
+    .featuredhomepage{
+        display: flex;
+        width: 98vw;
+    }
+    .featuredhomepage img{
+        display: flex;
+        width: 40vw;
+    }
+    .featuredhomepage img:hover{
+        width: 42vw;
     }
 }
 
